bugfix: fix redirect
